--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -134,7 +134,7 @@ And in this it is not likely that all are mistaken the conviction is rather to b
 
 \chapter{The scientific literature}
 
-Science today is highly specialized. Most basic questions have long been solved. The idea that the scientific community is building a "house of knowledge", where one story is built on the next, is often expressed by a famous quote by Isaac Newton 
+Science today is highly specialized. Most basic questions have long been solved. The scientific community is building a "house of knowledge", where one story is built on the next, is often expressed by a famous quote by Isaac Newton 
 
 \begin{quote}
 If I have seen further it is by standing on the shoulders of Giants.
